[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expense-tracker-bot"
version = "0.1.0"
description = "A Telegram bot for tracking expenses with Google Sheets."
readme = "README.md"
requires-python = ">=3.12"
license =  "MIT"
authors = [
    {name = "adebrouvier"},
]
keywords = ["telegram", "bot", "expenses", "google-sheets"]

dependencies = [
    "python-telegram-bot[webhooks]==21.4",
    "google-auth-oauthlib==1.2.1",
    "numpy==1.26.0",
    "python-dotenv==1.0.1",
    "pygsheets==2.0.6",
    "sentry-sdk==2.12.0",
]

[project.optional-dependencies]
dev = [
    "pylint==3.1.0",
    "flake8==7.0.0",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "mypy==1.9.0",
]

#[tool.setuptools]
#packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

